--- a/package.json
+++ b/package.json
@@ -17,6 +17,18 @@
   },
   "homepage": "https://github.com/donghunl74/nodejs_app#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "async": "^3.1.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.4",
+    "ejs": "^2.7.1",
+    "express": "^4.17.1",
+    "express-session": "^1.16.2",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.7.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "save": "^2.4.0"
   }
 }
